--- a/paris_baguette_leesuyeun/index.html
+++ b/paris_baguette_leesuyeun/index.html
@@ -10,13 +10,15 @@
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="app">
         <header>
-            <h1><a href="#"><img src="./images/logo1.png" alt="logo"></a></h1>
+            <p><a href="#"><img src="./images/logo1.png" alt="파리바게트"></a></p>
             <nav>
                 <a href="#">회사소개</a>
                 <a href="#">PB MAGAZIN</a>
@@ -26,7 +28,7 @@
         </header>
         <main>
             <div class="bg1">
-                <h1><img src="./images/logo2.png" alt=""></h1>
+                <p><img src="./images/logo2.png" alt=""></p>
                 <p>PARIS<br>BAGUETTE</p>
                 <p><img src="./images/bg1.jpg" alt=""></p>
             </div>
